--- a/react-player/src/styles/_library.scss
+++ b/react-player/src/styles/_library.scss
@@ -7,6 +7,9 @@
     height: 100%;
     box-shadow: 2px 2px 50px rgb(187, 180, 180);
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
 }
 h2{
     padding: 2rem;
@@ -37,4 +40,8 @@ h2{
 }
 .selected{
     background-color: rgb(37, 240, 179);
+}
+.active-Library {
+    transform: translateX(0%);
+    opacity: 1;
 }
