--- a/react-player/src/styles/app.scss
+++ b/react-player/src/styles/app.scss
@@ -9,6 +9,13 @@ h1,h2,h3{
 body{
     font-family: 'Hind', sans-serif;
 }
+.App{
+    transition: all 0.5s ease;
+}
+
+.library-active {
+    margin-left: 30%; 
+}
 
 @import "./player";
 @import "./song";
